@@ -68,6 +68,7 @@ AC_SUBST(LIBMONKEYAUDIO_A_LIBS)
 PKG_CHECK_MODULES(MONKEY_SRV,[
 	gtk+-2.0
 	gthread-2.0
+	libxml-2.0
 	])
 AC_SUBST(MONKEY_SRV_CFLAGS)
 AC_SUBST(MONKEY_SRV_LIBS)
